--- a/index.html
+++ b/index.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:image" content="https://idealabdar.github.io/assets/images/logo/aroliextokenwelcome.png">
+    
+    <!-- Meta Tag Open Graph Untuk Facebook -->
+    <meta property="og:url" content="https://idealabdar.github.io/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Aroliex Token">
     <meta property="og:description" content="Aroliex Token - Connecting People to Planet Coffee Ecosystem">
+    <meta property="og:image" content="https://idealabdar.github.io/assets/images/logo/aroliextokenwelcome.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <!-- End Meta Tag Open Graph Untuk Facebook -->
+
     <title>Aroliex Token - Connecting People to Planet Coffee Ecosystem</title>
 
 
@@ -314,7 +323,7 @@
                                         <path d="M8.49933 4C8.49933 4.66304 8.23594 5.29893 7.7671 5.76777C7.29826 6.23661 6.66237 6.5 5.99933 6.5C5.33629 6.5 4.70041 6.23661 4.23157 5.76777C3.76273 5.29893 3.49933 4.66304 3.49933 4C3.49933 3.33696 3.76273 2.70107 4.23157 2.23223C4.70041 1.76339 5.33629 1.5 5.99933 1.5C6.66237 1.5 7.29826 1.76339 7.7671 2.23223C8.23594 2.70107 8.49933 3.33696 8.49933 4V4ZM1 13.412C1.02142 12.1002 1.55756 10.8494 2.49278 9.92936C3.42801 9.00929 4.68739 8.49365 5.99933 8.49365C7.31127 8.49365 8.57066 9.00929 9.50588 9.92936C10.4411 10.8494 10.9772 12.1002 10.9987 13.412C9.43026 14.1312 7.72477 14.5023 5.99933 14.5C4.21533 14.5 2.522 14.1107 1 13.412Z" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                                         </svg>
                                     <p>Burn</p></div>
-                                    <h6>10,000,00 Tokens</h6>
+                                    <h6>10,000,000 Tokens</h6>
                                 </li>
                             </ul>
                         </div>
