--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                                         
                                     </li>
                                     <li>
-                                        <a href="#">About</a>
+                                        <a href="#about">About</a>
                                         
                                     </li>
                                     <li class="menu-item">
@@ -235,7 +235,7 @@
 
     <!-- About -->
     <section class="about">
-        <div class="shape"></div>
+        <div class="shape" id="about"></div>
         <div class="container">
             <div class="row rev">
                 <div class="col-xl-6 col-md-12">
