--- a/index.html
+++ b/index.html
@@ -234,8 +234,8 @@
     <!-- End Banner -->
 
     <!-- About -->
-    <section class="about">
-        <div class="shape" id="about"></div>
+    <section class="about" id="about">
+        <div class="shape"></div>
         <div class="container">
             <div class="row rev">
                 <div class="col-xl-6 col-md-12">
