--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                                         
                                     </li>
                                     <li>
-                                        <a href="#about">About</a>
+                                        <a href="index.html#about">About</a>
                                         
                                     </li>
                                     <li class="menu-item">
