--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                                         
                                     </li>
                                     <li>
-                                        <a href="index.html#about">About</a>
+                                        <a href="#">About</a>
                                         
                                     </li>
                                     <li class="menu-item">
@@ -234,7 +234,7 @@
     <!-- End Banner -->
 
     <!-- About -->
-    <section class="about" id="about">
+    <section class="about">
         <div class="shape"></div>
         <div class="container">
             <div class="row rev">
