--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
 
 
     <!-- roadmap -->  
-    <section class="roadmap">
+    <section class="roadmap" id="roadmap">
         <img src="assets/images/background/line.png" alt="" class="img-line">
         <div class="shape"></div>
         <div class="container">
@@ -481,7 +481,7 @@
     <!-- end roadmap -->  
 
     <!-- teams -->  
-    <section class="banner s3 s2">
+    <section class="banner s3 s2" id="team">
         <div class="shape"></div>
         <div class="shape right"></div>
         <div class="container-fluid s4">
@@ -719,7 +719,7 @@
     <!-- end teams -->  
 
     <!-- start partner -->  
-    <section class="banner s2">
+    <section class="banner s2" id="partner">
         <div class="shape"></div>
         <div class="shape right"></div>
         <div class="container">
