--- a/index.html
+++ b/index.html
@@ -260,12 +260,12 @@
                     <div class="block-text" >
                         <h6 class="sub-heading"><span>About Aroliex</span></h6>
                         <h3 class="heading wow" data-splitting>Innovation through Blockchain Technology</h3>
-                            <p class="mb-17">Aroliex (ARO) is an innovation in the field of coffee industry development that integrates the collaboration of all stake holders to connect through the intermediary of blockchain technology.</p>
-                            <p class="mb-26">Because there are many factors that hinder the Coffee Industry from collaborating with all stakeholders in its ecosystem,
-                                 Aroliex (ARO) was born with a Vision & Mission to integrate all parties involved 
-                                 in this field through one unified ecosystem connected via Blockchain technology. 
-                                 Through smart contracts from Polygon Technology, in the future it is hoped that Aroliex (ARO) 
-                                 can become a solution for the development of the Coffee Industry that is integrated in one ecosystem that needs each other.</p>
+                            <p class="mb-17">Aroliex is a crypto token and digital asset that is connected to the local and global coffee ecosystem through the integration of knowledge, economics, technology, society and the environment.</p>
+                            <p class="mb-26">We believe coffee is not just a magical seed, an economic commodity that connects between history and civilization across the countries, 
+                                but it is a part of an ecosystem of life that is interconnected and bound to each other.
+                                <br>
+                                Therefore, it is necessary to brainstorm problems in the chain based on facts and real-time data, which is expected to give rise to innovation to the solution and sustainable for the project.
+                                </p>
                             <a href="#" class="action-btn"><span>More About Us</span></a>
                     </div>
                 </div>
