--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                     <div class="banner__left">
                         <div class="block-text">
                             <h2 class="heading">The Digital Asset for Coffee <span class="arlo_tm_animation_text_word"></span> Ecosystem</h2>
-                            <p class="desc">Aroliex Coffeechain promises we Will Make a Big Revolution in sector Coffee Industry by Blockchain Technology Implementation.</p>
+                            <p class="desc">Coffee is life, a magical plant network that connects all people, cultures, countries and civilizations around the world.</p>
 
                             <a href="contact.html" class="action-btn"><span>Get Connected</span></a>
                         </div>
