--- a/index.html
+++ b/index.html
@@ -854,7 +854,9 @@
                                 </div>
                                 <div class="content">
                                     <div class="image">
+                                        <a href="https://coffeecrypto.id/">
                                         <img src="assets/images/layouts/cfee.jpg" alt="">
+                                        </a>
                                     </div>
     
                                     
