--- a/index.html
+++ b/index.html
@@ -854,7 +854,7 @@
                                 </div>
                                 <div class="content">
                                     <div class="image">
-                                        <a href="https://coffeecrypto.id/">
+                                        <a href="https://coffeecrypto.id/" target="_blank">
                                         <img src="assets/images/layouts/cfee.jpg" alt="">
                                         </a>
                                     </div>
