--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:url" content="https://idealabdar.github.io/">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Aroliex Token">
-    <meta property="og:description" content="Aroliex Token - Connecting People to Planet Coffee Ecosystem">
+    <meta property="og:description" content="#">
     <meta property="og:image" content="https://idealabdar.github.io/assets/images/logo/aroliextokenwelcome.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
