--- a/index.html
+++ b/index.html
@@ -938,10 +938,10 @@
                      <div>
                         <h2>Pengobatan Jamur</h2>
                         <ul class="quality-foods">
-                           <li><img alt="img" src="assets/img/check.png"><h6>Fresh &amp; Tasty</h6></li>
-                           <li><img alt="img" src="assets/img/check.png"><h6>Best in organic foods</h6></li>
-                           <li><img alt="img" src="assets/img/check.png"><h6>100 Fresh Ingredients</h6></li>
-                           <li><img alt="img" src="assets/img/check.png"><h6>Better for your Health</h6></li>
+                           <li><img alt="img" src="assets/img/check.png"><h6>1 buah CAF-Balm Scabies & Jamur</h6></li>
+                           <li><img alt="img" src="assets/img/check.png"><h6>1 buah spray anti bacterial</h6></li>
+                           <li><img alt="img" src="assets/img/check.png"><h6>sembuh lebih cepat</h6></li>
+                           <li><img alt="img" src="assets/img/check.png"><h6>tidak pakai ribet</h6></li>
                         </ul>
                         <div class="mb-4 d-flex align-items-center"><h2 class="m-0"><span>$</span>10.85</h2><del>$14.85</del></div>
                         <a href="#" class="button">Beli Paket</a>
@@ -955,10 +955,10 @@
                      <div>
                         <h2>Perawatan Telinga</h2>
                         <ul class="quality-foods">
-                           <li><img alt="img" src="assets/img/check.png"><h6>Fresh &amp; Tasty</h6></li>
-                           <li><img alt="img" src="assets/img/check.png"><h6>Best in organic foods</h6></li>
-                           <li><img alt="img" src="assets/img/check.png"><h6>100 Fresh Ingredients</h6></li>
-                           <li><img alt="img" src="assets/img/check.png"><h6>Better for your Health</h6></li>
+                           <li><img alt="img" src="assets/img/check.png"><h6>1 buah CAF - Eardrop</h6></li>
+                           <li><img alt="img" src="assets/img/check.png"><h6>1 buah Arcgit - Pembersih telinga</h6></li>
+                           <li><img alt="img" src="assets/img/check.png"><h6>Free Cotton Bud</h6></li>
+                           <li><img alt="img" src="assets/img/check.png"><h6>Telinga kucing bersih dan sehat</h6></li>
                         </ul>
                         <div class="mb-4 d-flex align-items-center"><h2 class="m-0"><span>$</span>10.85</h2><del>$14.85</del></div>
                         <a href="#" class="button">Beli Paket</a>
