--- a/index.html
+++ b/index.html
@@ -1187,10 +1187,8 @@
             </div>
             <div class="link-about Newsletter">
                <h3>Penawaran Kerjasama</h3>
-                  <form action="https://api.whatsapp.com/send" method="get" target="_blank">
+                  <form action="https://s.id/1VkOV" method="get" target="_blank">
                   <input type="text" name="phone" placeholder="Masukkan Nomor WhatsApp Anda...">
-                  <input type="hidden" name="phone" value="6285340046722">
-                  <input type="hidden" name="text" value="Saya ingin mengajukan kerjasama produk">
                   <button class="button" type="submit">Kirim Penawaran</button>
                   </form>
                
