--- a/index.html
+++ b/index.html
@@ -943,8 +943,8 @@
                            <li><img alt="img" src="assets/img/check.png"><h6>sembuh lebih cepat</h6></li>
                            <li><img alt="img" src="assets/img/check.png"><h6>tidak pakai ribet</h6></li>
                         </ul>
-                        <div class="mb-4 d-flex align-items-center"><h2 class="m-0"><span>$</span>10.85</h2><del>$14.85</del></div>
-                        <a href="#" class="button">Beli Paket</a>
+                        <div class="mb-4 d-flex align-items-center"><h2 class="m-0"><span>$</span>Rp.65.000</h2><del>Rp.74.000</del></div>
+                        <a href="https://s.id/1Vo9i" class="button" target="_blank">Beli Paket</a>
                      </div>
                   </div>
                </div>
@@ -960,8 +960,8 @@
                            <li><img alt="img" src="assets/img/check.png"><h6>Free Cotton Bud</h6></li>
                            <li><img alt="img" src="assets/img/check.png"><h6>Telinga kucing bersih dan sehat</h6></li>
                         </ul>
-                        <div class="mb-4 d-flex align-items-center"><h2 class="m-0"><span>$</span>10.85</h2><del>$14.85</del></div>
-                        <a href="#" class="button">Beli Paket</a>
+                        <div class="mb-4 d-flex align-items-center"><h2 class="m-0"><span>$</span>Rp.35000</h2><del>Rp.44.000</del></div>
+                        <a href="https://s.id/1Vo9E" class="button" target="_blank">Beli Paket</a>
                      </div>
                   </div>
                </div>
