--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
    <title>Cat and Friends - Produk kesehatan dan perawatan kucing terbaik kedua</title>
    <link rel="icon" href="assets/img/logo-icon.png">
 
+   <!-- verifikasi pinterest -->
+   <meta name="p:domain_verify" content="edb8cfdb0f824cbe201608b2db76f2e8"/>
+
     <!-- Meta Tag Open Graph Untuk Facebook -->
     <meta property="og:url" content="https://catandfriends.biz.id">
     <meta property="og:type" content="website">
