--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 <head>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <meta name="description" content="Produk kesehatan dan perawatan kucing terbaik kedua di Kota Makassar">
+   <meta name="description" content="Tempat Konsultasi Kucing Terbaik Kedua di Makassar - Produk kesehatan dan perawatan kucing">
    <meta name="keywords" content="Produk Kesehatan Kucing, Produk Perawatan Kucing, obat kucing makassar, pet hotel makassar, vitamin kucing makassar, vitamin kucing murah, obat kucing murah di makassar, obat flu kucing makassar, obat jamur dan scabies, obat jamur dan scabies di makassar">
-   <title>Cat and Friends - Produk kesehatan dan perawatan kucing terbaik kedua</title>
+   <title>Cat and Friends - Tempat Konsultasi Kucing Terbaik Kedua - Produk kesehatan dan perawatan kucing</title>
    <link rel="icon" href="assets/img/logo-icon.png">
 
    <!-- verifikasi pinterest -->
