--- a/index.html
+++ b/index.html
@@ -6,9 +6,26 @@
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta name="description" content="Tempat Konsultasi Kucing Terbaik Kedua di Makassar - Produk kesehatan dan perawatan kucing">
-   <meta name="keywords" content="Produk Kesehatan Kucing, Produk Perawatan Kucing, obat kucing makassar, pet hotel makassar, vitamin kucing makassar, vitamin kucing murah, obat kucing murah di makassar, obat flu kucing makassar, obat jamur dan scabies, obat jamur dan scabies di makassar">
+   <meta name="keywords" content="Konsultasi kucing makassar, Produk Kesehatan Kucing, Produk Perawatan Kucing, obat kucing makassar, pet hotel makassar, vitamin kucing makassar, vitamin kucing murah, obat kucing murah di makassar, obat flu kucing makassar, obat jamur dan scabies, obat jamur dan scabies di makassar">
    <title>Cat and Friends - Tempat Konsultasi Kucing Terbaik Kedua - Produk kesehatan dan perawatan kucing</title>
-   <link rel="icon" href="assets/img/logo-icon.png">
+   <link rel="icon" href="https://catandfriends.biz.id/assets/img/logo-icon.png">
+
+   <!-- schema website -->
+   <script type="application/ld+json">
+      {
+        "@context": "http://schema.org",
+        "@type": "WebPage",
+        "name": "Jasa Konsultasi Kucing di Cat and Friends",
+        "description": "Temukan jasa konsultasi kucing gratis di Cat and Friends, tempat terbaik untuk konsultasi perawatan dan pengobatan kucing Anda.",
+        "url": "https://catandfriends.biz.id/",
+        "mainEntityOfPage": {
+          "@type": "WebPage",
+          "@id": "https://catandfriends.biz.id/"
+        }
+      }
+   </script>
+   <!-- end schema website -->
+      
 
    <!-- verifikasi pinterest -->
    <meta name="p:domain_verify" content="edb8cfdb0f824cbe201608b2db76f2e8"/>
