--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
 <!-- end head -->
 
 <body>
+
 <!-- preloader -->
 <div class="preloader"> 
     <div class="container">
@@ -196,6 +197,35 @@
 <section class="featured-arae-three gap" style="background-image:url(assets/img/patron-black.jpg)">
    <div class="container">
       <div class="row three-slider owl-carousel owl-theme">
+         <!-- hero konsultasi kucing -->
+         <div class="col-xl-12 item">
+            <div class="row align-items-center">
+               <div class="col-xl-6">
+                  <div class="fastest-delivery">
+                     <h4>layanan gratis</h4>
+                     <h1>Konsultasi Kucing Makassar</h1>
+                     <p>konsultasi gratis via whatsapp mulai dari pertolongan pertama, perawatan, pengobatan sampai pada tahap pemulihan kucingmu.</p>
+                     <div class="d-flex align-items-center justify-content-xl-start justify-content-center">
+                        <a href="https://s.id/1VhWp" class="button" target="_blank">yuk konsultasi !</a>
+                        <ul class="star ms-5">
+                           <li><i class="fa-solid fa-star"></i></li>
+                           <li><i class="fa-solid fa-star"></i></li>
+                           <li><i class="fa-solid fa-star"></i></li>
+                           <li><i class="fa-solid fa-star"></i></li>
+                           <li><i class="fa-solid fa-star"></i></li>
+                           <li>4.8</li>
+                        </ul>
+                     </div>
+                  </div>
+               </div>
+               <div class="col-xl-6">
+                  <div class="fastest-delivery-img">
+                     
+                     <img alt="jasa-konsultasi-kucing-di-makassar-gratis" src="assets/img/jasa-konsultasi-kucing-di-makassar.png">
+                  </div>
+               </div>
+            </div>
+         </div>
          <!-- hero 1 -->
          <div class="col-xl-12 item">
             <div class="row align-items-center">
