--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <meta name="description" content="Tempat Konsultasi Kucing Terbaik Kedua di Makassar - Produk kesehatan dan perawatan kucing">
+   <meta name="description" content="Tempat Konsultasi Kucing Terbaik Kedua di Makassar, menyediakan layanan konsultasi gratis dan Produk kesehatan dan perawatan kucing">
    <meta name="keywords" content="Konsultasi kucing makassar, Produk Kesehatan Kucing, Produk Perawatan Kucing, obat kucing makassar, pet hotel makassar, vitamin kucing makassar, vitamin kucing murah, obat kucing murah di makassar, obat flu kucing makassar, obat jamur dan scabies, obat jamur dan scabies di makassar">
    <title>Cat and Friends - Tempat Konsultasi Kucing Terbaik Kedua - Produk kesehatan dan perawatan kucing</title>
    <link rel="icon" href="https://catandfriends.biz.id/assets/img/logo-icon.png">
@@ -232,7 +232,7 @@
                <div class="col-xl-6">
                   <div class="fastest-delivery">
                      <h4>Protein Booster untuk anabul</h4>
-                     <h1>TamaVit</h1>
+                     <h2>TamaVit</h2>
                      <p>Maksimalkan penyerapan protein dalam tubuh, Kucingmu jadi lebih kuat dan sehat</p>
                      <div class="d-flex align-items-center justify-content-xl-start justify-content-center">
                         <a href="https://s.id/1VhXt" class="button" target="_blank">Konsultasikan Produk</a>
@@ -267,7 +267,7 @@
                <div class="col-xl-6">
                   <div class="fastest-delivery">
                      <h4>Obat Flu yang bikin flu langsung gassfull</h4>
-                     <h1>MetaFul</h1>
+                     <h2>MetaFul</h2>
                      <p>Menggunakan bahan alami, diracik khusus untuk mengatasi masalah pernafasan yang membuat kucingmu tak nyaman</p>
                      
                      <div class="d-flex align-items-center justify-content-xl-start justify-content-center">
@@ -296,7 +296,7 @@
                <div class="col-xl-6">
                   <div class="fastest-delivery">
                      <h4>Spray Anti Microbial yang mudah digunakan !</h4>
-                     <h1>CAF Spray</h1>
+                     <h2>CAF Spray</h2>
                      <p>Bantu kamu untuk menyembuhkan si anabul, serta mempercepat proses pemulihan scabies dan jamur</p>
                      <div class="d-flex align-items-center justify-content-xl-start justify-content-center">
                         <a href="https://s.id/1VhXT" class="button" target="_blank">Konsultasikan Produk</a>
@@ -324,7 +324,7 @@
                <div class="col-xl-6">
                   <div class="fastest-delivery">
                      <h4>Lawan Jamur dan Scabies, separah apapun !</h4>
-                     <h1>CAF - Balm</h1>
+                     <h2>CAF - Balm</h2>
                      <p>Jangan panik, salep ini untuk kamu yang ingin menyembuhkan jamur & scabies parah dengan cepat, oleskan secara merata dan biarkan salepnya bekerja</p>
                      <div class="d-flex align-items-center justify-content-xl-start justify-content-center">
                         <a href="https://s.id/1VhY1" class="button" target="_blank">Konsultasikan Produk</a>
