--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    <meta name="description" content="Tempat Konsultasi Kucing Terbaik Kedua di Makassar, menyediakan layanan konsultasi gratis dan Produk kesehatan dan perawatan kucing">
    <meta name="keywords" content="Konsultasi kucing makassar, Produk Kesehatan Kucing, Produk Perawatan Kucing, obat kucing makassar, pet hotel makassar, vitamin kucing makassar, vitamin kucing murah, obat kucing murah di makassar, obat flu kucing makassar, obat jamur dan scabies, obat jamur dan scabies di makassar">
    <title>Cat and Friends - Tempat Konsultasi Kucing Terbaik Kedua - Produk kesehatan dan perawatan kucing</title>
-   <link rel="icon" href="https://catandfriends.biz.id/assets/img/logo-icon.png">
+   <link rel="icon" href="https://catandfriends.biz.id/assets/img/logo-icon.png" type="image/x-icon">
    <link rel="canonical" href="https://catandfriends.biz.id/" />
 
    <!-- schema website -->
