--- a/index.html
+++ b/index.html
@@ -25,6 +25,41 @@
         }
       }
    </script>
+
+   <script type="application/ld+json">
+      {
+        "@context": "http://schema.org",
+        "@type": "LocalBusiness",
+        "name": "Cat and Friends Makassar",
+        "image": "link-gambar-restoran.jpg",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "jl swadaya, Jl. Pd. Asri 1 Jl. Goa Ria, Sudiang, Kec. Biringkanaya",
+          "addressLocality": "Makassar",
+          "addressRegion": "Sulawesi Selatan",
+          "postalCode": "90242",
+          "addressCountry": "ID"
+        },
+        "telephone": "+6285340046722",
+        "priceRange": "$",  // Range harga, misalnya $, $$, $$$
+        "openingHours": [
+          "Monday-Sunday 10:00-20:00"
+        ],
+        "geo": {
+          "@type": "GeoCoordinates",
+          "latitude": -5.08670277843534,
+          "longitude": 119.528976695665
+        },
+        "sameAs": [
+          "https://www.instagram.com/catandfriends_id/",
+          "https://www.youtube.com/channel/UCNumaMyiRZzDvzY84F3N54g",
+          "https://www.tiktok.com/@catandfriends_id",
+          "https://web.facebook.com/profile.php?id=100089071804556",
+          "https://s.id/catandfriends"
+        ],
+        "hasMap": "https://maps.app.goo.gl/xD5gj21DK9yDgivCA"
+      }
+   </script>
    <!-- end schema website -->
       
 
