update gambar url

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         "@context": "http://schema.org",
         "@type": "LocalBusiness",
         "name": "Cat and Friends Makassar",
-        "image": "link-gambar-restoran.jpg",
+        "image": "https://catandfriends.biz.id/assets/img/jasa-konsultasi-kucing-di-makassar.png",
         "address": {
           "@type": "PostalAddress",
           "streetAddress": "jl swadaya, Jl. Pd. Asri 1 Jl. Goa Ria, Sudiang, Kec. Biringkanaya",
