--- a/index.html
+++ b/index.html
@@ -117,8 +117,7 @@
             <!-- Logo -->
             <div class="flex-shrink-0 flex items-center cursor-pointer" onclick="window.scrollTo(0,0)">
                <!-- GANTI src INI dengan file logo Anda (misal: assets/img/logo.png) -->
-               <img src="https://via.placeholder.com/150x50/ffffff/8B5CF6?text=LOGO+ANDA" alt="Cat and Friends Logo"
-                  class="h-10 md:h-12 w-auto object-contain">
+               <img src="assets\img\logo.png" alt="Cat and Friends Logo" class="h-10 md:h-12 w-auto object-contain">
             </div>
 
             <!-- Desktop Menu -->
@@ -269,9 +268,7 @@
          <div class="grid md:grid-cols-2 gap-8 lg:gap-12">
             <!-- Card Layanan 1 -->
             <div class="group relative rounded-[2rem] overflow-hidden h-96 shadow-xl cursor-pointer">
-               <img
-                  src="https://images.unsplash.com/photo-1541781777631-fa9531908431?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80"
-                  alt="Pet Sitter"
+               <img src="assets/img/petsitter.webp" alt="Pet Sitter"
                   class="absolute w-full h-full object-cover transition-transform duration-700 group-hover:scale-110">
                <div class="absolute inset-0 bg-gradient-to-t from-purple-900/90 via-purple-900/40 to-transparent"></div>
                <div
@@ -457,8 +454,25 @@
             <div>
                <span class="text-brand-primary font-bold tracking-wider uppercase text-sm">Review Jujur</span>
                <h2 class="text-3xl font-bold mt-2 mb-6 text-brand-dark">Apa Kata Mereka?</h2>
-               <p class="text-brand-text mb-8">Ribuan kucing di Makassar telah terbantu dengan layanan kami.</p>
+               <p class="text-brand-text mb-8">Puluhan kucing di Makassar telah terbantu dengan layanan kami.</p>
                <div class="bg-brand-accent p-8 rounded-3xl relative border border-purple-50">
+                  <i class="fa-solid fa-quote-right absolute top-8 right-8 text-brand-primary text-4xl opacity-20"></i>
+                  <div class="flex text-yellow-400 text-sm mb-3"><i class="fa-solid fa-star"></i><i
+                        class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                        class="fa-solid fa-star"></i></div>
+                  <p class="text-brand-dark font-medium italic mb-6 leading-relaxed">"Alhamdulillah, setelah kucing saya
+                     konsumsi obat flunya (Metaful), kucing saya sudah kembali pulih dan aktif kesana kemari."</p>
+                  <div class="flex items-center gap-4">
+                     <div
+                        class="w-12 h-12 rounded-full bg-gradient-primary flex items-center justify-center text-white font-bold text-lg">
+                        A</div>
+                     <div>
+                        <h4 class="font-bold text-sm text-brand-dark">Kak Anisa</h4>
+                        <p class="text-xs text-brand-text">Customer Metaful</p>
+                     </div>
+                  </div>
+               </div>
+               <div class="bg-brand-accent p-8 rounded-3xl relative border border-purple-90">
                   <i class="fa-solid fa-quote-right absolute top-8 right-8 text-brand-primary text-4xl opacity-20"></i>
                   <div class="flex text-yellow-400 text-sm mb-3"><i class="fa-solid fa-star"></i><i
                         class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
@@ -477,13 +491,13 @@
                </div>
             </div>
             <div class="grid grid-cols-2 gap-4">
-               <img src="https://images.unsplash.com/photo-1570824104453-508955ab713e?auto=format&fit=crop&w=400&q=80"
+               <img src="assets/img/review1.png"
                   class="rounded-[2rem] w-full h-48 object-cover mb-4 shadow-md hover:scale-105 transition duration-500">
-               <img src="https://images.unsplash.com/photo-1533738363-b7f9aef128ce?auto=format&fit=crop&w=400&q=80"
+               <img src="assets/img/review2.png"
                   class="rounded-[2rem] w-full h-64 object-cover mt-8 shadow-md hover:scale-105 transition duration-500">
-               <img src="https://images.unsplash.com/photo-1519052537078-e6302a4968ef?auto=format&fit=crop&w=400&q=80"
+               <img src="assets/img/review3.png"
                   class="rounded-[2rem] w-full h-64 object-cover -mt-12 shadow-md hover:scale-105 transition duration-500">
-               <img src="https://images.unsplash.com/photo-1491485880348-85d48a9e5312?auto=format&fit=crop&w=400&q=80"
+               <img src="assets/img/review5.png"
                   class="rounded-[2rem] w-full h-48 object-cover shadow-md hover:scale-105 transition duration-500">
             </div>
          </div>
@@ -497,8 +511,7 @@
             <div>
                <div class="flex items-center gap-2 mb-6">
                   <!-- Logo diganti gambar, sama seperti navbar -->
-                  <img src="https://via.placeholder.com/150x50/ffffff/8B5CF6?text=LOGO+ANDA" alt="Cat and Friends Logo"
-                     class="h-10 md:h-12 w-auto object-contain">
+                  <img src="assets/img/logo.png" alt="Cat and Friends Logo" class="h-10 md:h-12 w-auto object-contain">
                </div>
                <p class="text-brand-text mb-6">"Product based on customer's problem is a solution". Kami hadir untuk
                   mendengar dan memberi solusi.</p>
