--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
 
    <!-- FIX: ID Produk dipindahkan ke sini dan ditambahkan class scroll-mt-24 -->
    <!-- Featured Products (Horizontal Scroll) -->
-   <section id="produk" class="py-24 bg-white scroll-mt-24">
+   <section id="produk" class="pt-24 pb-12 bg-white scroll-mt-24">
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
          <div class="flex justify-between items-end mb-10">
             <div>
@@ -345,15 +345,12 @@
                class="min-w-[280px] md:min-w-[320px] bg-white rounded-3xl p-5 shadow-lg shadow-purple-100 hover:shadow-xl hover:-translate-y-1 transition duration-300 snap-center border border-gray-50">
                <div
                   class="relative bg-purple-50 rounded-2xl h-56 mb-4 overflow-hidden flex items-center justify-center group">
-                  <img
-                     src="https://images.unsplash.com/photo-1583337130417-3346a1be7dee?auto=format&fit=crop&w=500&q=80"
-                     alt="Tamavit"
-                     class="object-cover w-full h-full mix-blend-overlay opacity-60 group-hover:scale-105 transition duration-500">
-                  <span class="relative z-10 font-extrabold text-2xl text-brand-primary opacity-40">TAMAVIT</span>
+                  <img src="assets/img/cafspray.jpeg" alt="CAF Spray"
+                     class="object-cover w-full h-full group-hover:scale-105 transition duration-500">
                </div>
-               <h3 class="font-bold text-lg text-brand-dark">Tamavit - Protein Booster</h3>
+               <h3 class="font-bold text-lg text-brand-dark">Anti Microbial Spray</h3>
                <div class="flex justify-between items-center mt-3">
-                  <span class="text-xl font-bold text-transparent bg-clip-text bg-gradient-primary">Rp 49.000</span>
+                  <span class="text-xl font-bold text-transparent bg-clip-text bg-gradient-primary">Rp 30.000</span>
                   <div class="text-yellow-400 text-xs flex gap-1"><i class="fa-solid fa-star"></i> 4.9</div>
                </div>
                <a href="https://s.id/1VhXt" target="_blank"
@@ -366,32 +363,27 @@
                class="min-w-[280px] md:min-w-[320px] bg-white rounded-3xl p-5 shadow-lg shadow-purple-100 hover:shadow-xl hover:-translate-y-1 transition duration-300 snap-center border border-gray-50">
                <div
                   class="relative bg-pink-50 rounded-2xl h-56 mb-4 overflow-hidden flex items-center justify-center group">
-                  <img
-                     src="https://images.unsplash.com/photo-1573865526739-10659fec78a5?auto=format&fit=crop&w=500&q=80"
-                     alt="Metaful"
-                     class="object-cover w-full h-full mix-blend-overlay opacity-60 group-hover:scale-105 transition duration-500">
-                  <span class="relative z-10 font-extrabold text-2xl text-brand-primary opacity-40">METAFUL</span>
+                  <img src="assets/img/cafbesar.jpeg" alt="CAF Spray Besar"
+                     class="object-cover w-full h-full group-hover:scale-105 transition duration-500">
                </div>
-               <h3 class="font-bold text-lg text-brand-dark">Metaful - Obat Flu Ampuh</h3>
+               <h3 class="font-bold text-lg text-brand-dark">CAF Spray Jamur</h3>
                <div class="flex justify-between items-center mt-3">
-                  <span class="text-xl font-bold text-transparent bg-clip-text bg-gradient-primary">Rp 25.000</span>
-                  <div class="text-yellow-400 text-xs flex gap-1"><i class="fa-solid fa-star"></i> 5.0</div>
+                  <span class="text-xl font-bold text-transparent bg-clip-text bg-gradient-primary">Rp 49.000</span>
+                  <div class="text-yellow-400 text-xs flex gap-1"><i class="fa-solid fa-star"></i> 4.0</div>
                </div>
                <a href="https://s.id/1VhXN" target="_blank"
                   class="block w-full text-center mt-5 bg-gray-50 text-brand-dark rounded-xl py-3 hover:bg-brand-dark hover:text-white transition font-bold text-sm">Lihat
                   Detail</a>
             </div>
 
-            <!-- Product Card 3 -->
+            <!-- Product Card 3 
             <div
                class="min-w-[280px] md:min-w-[320px] bg-white rounded-3xl p-5 shadow-lg shadow-purple-100 hover:shadow-xl hover:-translate-y-1 transition duration-300 snap-center border border-gray-50">
                <div
                   class="relative bg-purple-50 rounded-2xl h-56 mb-4 overflow-hidden flex items-center justify-center group">
                   <img
                      src="https://images.unsplash.com/photo-1592194996308-7b43878e84a6?auto=format&fit=crop&w=500&q=80"
-                     alt="CAF Spray"
-                     class="object-cover w-full h-full mix-blend-overlay opacity-60 group-hover:scale-105 transition duration-500">
-                  <span class="relative z-10 font-extrabold text-2xl text-brand-primary opacity-40">SPRAY</span>
+                     alt="CAF Spray" class="object-cover w-full h-full group-hover:scale-105 transition duration-500">
                </div>
                <h3 class="font-bold text-lg text-brand-dark">Anti Microbial Spray</h3>
                <div class="flex justify-between items-center mt-3">
@@ -401,12 +393,12 @@
                <a href="https://s.id/1VhXT" target="_blank"
                   class="block w-full text-center mt-5 bg-gray-50 text-brand-dark rounded-xl py-3 hover:bg-brand-dark hover:text-white transition font-bold text-sm">Lihat
                   Detail</a>
-            </div>
+            </div>-->
          </div>
       </div>
    </section>
 
-   <!-- Bundle/Paket Section -->
+   <!-- Bundle/Paket Section 
    <section class="py-24 bg-gradient-soft">
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
          <div class="grid md:grid-cols-2 gap-8">
@@ -445,30 +437,31 @@
             </div>
          </div>
       </div>
-   </section>
+   </section>-->
 
    <!-- Testimonials -->
-   <section id="testimoni" class="py-24 bg-white scroll-mt-24">
+   <section id="testimoni" class="pt-12 pb-24 bg-white scroll-mt-24">
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
          <div class="grid lg:grid-cols-2 gap-12 items-center">
             <div>
                <span class="text-brand-primary font-bold tracking-wider uppercase text-sm">Review Jujur</span>
                <h2 class="text-3xl font-bold mt-2 mb-6 text-brand-dark">Apa Kata Mereka?</h2>
-               <p class="text-brand-text mb-8">Puluhan kucing di Makassar telah terbantu dengan layanan kami.</p>
-               <div class="bg-brand-accent p-8 rounded-3xl relative border border-purple-50">
+               <p class="text-brand-text mb-8">Makin banyak kucing di Makassar telah terbantu dengan layanan kami.</p>
+               <div class="bg-brand-accent p-8 rounded-3xl relative border border-purple-50 mb-8">
                   <i class="fa-solid fa-quote-right absolute top-8 right-8 text-brand-primary text-4xl opacity-20"></i>
                   <div class="flex text-yellow-400 text-sm mb-3"><i class="fa-solid fa-star"></i><i
                         class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
                         class="fa-solid fa-star"></i></div>
-                  <p class="text-brand-dark font-medium italic mb-6 leading-relaxed">"Alhamdulillah, setelah kucing saya
-                     konsumsi obat flunya (Metaful), kucing saya sudah kembali pulih dan aktif kesana kemari."</p>
+                  <p class="text-brand-dark font-medium italic mb-6 leading-relaxed">"saya titip kucing saya untuk
+                     penyembuhan lukanya,
+                     kucing saya sudah kembali pulih dan aktif kesana kemari."</p>
                   <div class="flex items-center gap-4">
                      <div
                         class="w-12 h-12 rounded-full bg-gradient-primary flex items-center justify-center text-white font-bold text-lg">
-                        A</div>
+                        C</div>
                      <div>
-                        <h4 class="font-bold text-sm text-brand-dark">Kak Anisa</h4>
-                        <p class="text-xs text-brand-text">Customer Metaful</p>
+                        <h4 class="font-bold text-sm text-brand-dark">Customer</h4>
+                        <p class="text-xs text-brand-text">Customer CAF Spray</p>
                      </div>
                   </div>
                </div>
@@ -477,15 +470,16 @@
                   <div class="flex text-yellow-400 text-sm mb-3"><i class="fa-solid fa-star"></i><i
                         class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
                         class="fa-solid fa-star"></i></div>
-                  <p class="text-brand-dark font-medium italic mb-6 leading-relaxed">"Alhamdulillah, setelah kucing saya
-                     konsumsi obat flunya (Metaful), kucing saya sudah kembali pulih dan aktif kesana kemari."</p>
+                  <p class="text-brand-dark font-medium italic mb-6 leading-relaxed">"Alhamdulillah, tugas keluar kota
+                     tidak
+                     perlu khawatir karena ada kk dari CAF yang ngurusin Anabulku"</p>
                   <div class="flex items-center gap-4">
                      <div
                         class="w-12 h-12 rounded-full bg-gradient-primary flex items-center justify-center text-white font-bold text-lg">
                         A</div>
                      <div>
                         <h4 class="font-bold text-sm text-brand-dark">Kak Anisa</h4>
-                        <p class="text-xs text-brand-text">Customer Metaful</p>
+                        <p class="text-xs text-brand-text">Customer Pet Sitter</p>
                      </div>
                   </div>
                </div>
