--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
    </nav>
 
    <!-- Hero Section -->
-   <section id="home" class="pt-32 pb-20 lg:pt-48 lg:pb-32 overflow-hidden bg-gradient-soft relative">
+   <section id="home" class="pt-32 pb-12 lg:pt-48 lg:pb-20 overflow-hidden bg-gradient-soft relative">
       <div
          class="absolute top-0 right-0 w-[500px] h-[500px] bg-purple-300 rounded-full mix-blend-multiply filter blur-[100px] opacity-20 animate-blob">
       </div>
@@ -214,7 +214,7 @@
    </section>
 
    <!-- About Section -->
-   <section id="about" class="py-24 bg-white relative z-20 scroll-mt-20">
+   <section id="about" class="pt-12 pb-24 bg-white relative z-20 scroll-mt-20">
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
          <div class="text-center mb-16">
             <span class="text-brand-primary font-bold tracking-wider uppercase text-sm">Tentang Kami</span>
