--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
    </section>
 
    <!-- Footer -->
-   <footer class="bg-white border-t border-purple-100 pt-20 pb-10 rounded-t-[3rem] mt-12">
+   <footer class="bg-brand-accent border-t border-purple-100 pt-20 pb-10 rounded-t-[3rem] mt-12">
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
          <div class="grid md:grid-cols-3 gap-12 mb-12">
             <div>
