--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                   </div>
                   <h3 class="text-white text-3xl font-bold mb-2">Pet Sitter</h3>
                   <p class="text-purple-100 mb-6 line-clamp-2">Lagi sibuk atau luar kota? Kami datang ke rumahmu untuk
-                     memberi makan & bermain.</p>
+                     memberi makan, membersihkan & bermain.</p>
                   <a href="https://wa.me/6285340046722?text=Halo%20Admin,%20mau%20tanya%20tentang%20Pet%20Sitter"
                      target="_blank"
                      class="inline-flex items-center justify-center w-full sm:w-auto bg-white text-brand-primary px-6 py-3 rounded-full font-bold hover:bg-brand-secondary hover:text-white transition duration-300 shadow-lg">Booking
@@ -306,8 +306,9 @@
                      <span class="text-white font-bold tracking-wide uppercase text-sm">Penginapan Nyaman</span>
                   </div>
                   <h3 class="text-white text-3xl font-bold mb-2">Pet Hotel</h3>
-                  <p class="text-purple-100 mb-6 line-clamp-2">Liburan tenang tanpa khawatir. Fasilitas ruangan bersih,
-                     ber-AC, dan pemantauan ketat.</p>
+                  <p class="text-purple-100 mb-6 line-clamp-2">Liburan tenang tanpa khawatir. Fasilitas ruangan serta
+                     Perawatan
+                     layaknya di rumah sendiri.</p>
                   <a href="https://wa.me/6285340046722?text=Halo%20Admin,%20mau%20tanya%20tentang%20Pet%20Hotel"
                      target="_blank"
                      class="inline-flex items-center justify-center w-full sm:w-auto bg-white text-brand-primary px-6 py-3 rounded-full font-bold hover:bg-brand-secondary hover:text-white transition duration-300 shadow-lg">Cek
