--- a/index.html
+++ b/index.html
@@ -13,26 +13,26 @@
       content="Konsultasi kucing makassar, Pet Hotel Makassar, Pet Sitter Makassar, Obat Kucing Makassar, Vitamin Kucing, Penitipan Kucing Makassar, Cat and Friends">
    <meta name="author" content="Cat and Friends Makassar">
    <meta name="robots" content="index, follow">
-   <link rel="canonical" href="https://catandfriends.biz.id/">
+   <link rel="canonical" href="https://sobatcaf.my.id/">
 
    <!-- Favicon -->
    <link rel="icon" type="image/png" href="assets/img/logo-icon.png">
 
    <!-- Open Graph / Facebook / WhatsApp -->
    <meta property="og:type" content="website">
-   <meta property="og:url" content="https://catandfriends.biz.id/">
+   <meta property="og:url" content="https://sobatcaf.my.id/">
    <meta property="og:title" content="Cat and Friends - Sahabat Kucing Makassar">
    <meta property="og:description"
       content="Solusi lengkap anabul: Konsultasi Gratis, Pet Hotel Nyaman, Pet Sitter Home Visit, dan Produk Kesehatan Herbal.">
-   <meta property="og:image" content="https://catandfriends.biz.id/assets/img/logo.png">
+   <meta property="og:image" content="https://sobatcaf.my.id/assets/img/logo-icon.png">
 
    <!-- Twitter -->
    <meta property="twitter:card" content="summary_large_image">
-   <meta property="twitter:url" content="https://catandfriends.biz.id/">
+   <meta property="twitter:url" content="https://sobatcaf.my.id/">
    <meta property="twitter:title" content="Cat and Friends - Sahabat Kucing Makassar">
    <meta property="twitter:description"
       content="Solusi lengkap anabul: Konsultasi Gratis, Pet Hotel Nyaman, Pet Sitter Home Visit, dan Produk Kesehatan Herbal.">
-   <meta property="twitter:image" content="https://catandfriends.biz.id/assets/img/logo.png">
+   <meta property="twitter:image" content="https://sobatcaf.my.id/assets/img/logo-icon.png">
 
    <!-- Schema Markup (JSON-LD) -->
    <script type="application/ld+json">
@@ -40,9 +40,9 @@
         "@context": "http://schema.org",
         "@type": "LocalBusiness",
         "name": "Cat and Friends Makassar",
-        "image": "https://catandfriends.biz.id/assets/img/logo.png",
+        "image": "https://sobatcaf.my.id/assets/img/logo-icon.png",
         "telephone": "+6285340046722",
-        "url": "https://catandfriends.biz.id/",
+        "url": "https://sobatcaf.my.id/",
         "address": {
           "@type": "PostalAddress",
           "streetAddress": "Jl. Swadaya, Pondok Asri 1, Sudiang",
