--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
    <meta property="og:title" content="Cat and Friends - Sahabat Kucing Makassar">
    <meta property="og:description"
       content="Solusi lengkap anabul: Konsultasi Gratis, Pet Hotel Nyaman, Pet Sitter Home Visit, dan Produk Kesehatan Herbal.">
-   <meta property="og:image" content="https://sobatcaf.my.id/assets/img/logo-icon.png">
+   <meta property="og:image" content="https://sobatcaf.my.id/assets/img/jasa-konsultasi-kucing-di-makassar.png">
 
    <!-- Twitter -->
    <meta property="twitter:card" content="summary_large_image">
