--- a/OPEN-KARATE-TOURNAMENT-2026.html
+++ b/OPEN-KARATE-TOURNAMENT-2026.html
@@ -13,7 +13,8 @@
   <meta property="og:title" content="Piala Pangdam XXIV/Mandala Trikora Open Karate Tournament">
   <meta property="og:description"
     content="Kejuaraan Karate Terbesar di Tanah Papua. 10 April 2026, GOR Haid Sai, Merauke.">
-  <meta property="og:image" content="assets/img/PIALA PANGDAM XXIV MANDALA TRIKORA.png">
+  <meta property="og:image" content="https://sobatcaf.my.id/assets/img/PIALA%20PANGDAM%20XXIV%20MANDALA%20TRIKORA.png">
+  <meta property="og:url" content="https://sobatcaf.my.id/OPEN-KARATE-TOURNAMENT-2026.html">
   <meta property="og:type" content="website">
 
   <!-- Tailwind CSS -->
